fix spacing section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,7 +67,7 @@ a {
     word-break: break-all;
 }
 
-/* Header */
+/* ============Header========= */
 .header {
     height: 100vh;
     width: 100%;
@@ -114,7 +114,7 @@ a {
     margin-left: 18px;
 }
 
-/* Hero Section */
+/* =============Hero Section============ */
 .hero .info {
     width: 50%;
     margin-top: 130px;
@@ -154,9 +154,10 @@ a {
     right: calc((100vw - 1110px) / 2 - 100px);
 }
 
-/* Clients Section */
+/* =========Clients Section============= */
 .clients {
-    margin-top: 122px;
+    margin-top: 79px;
+    padding: 43px 0 41px;
 }
 
 .clients .row {
@@ -182,9 +183,10 @@ a {
     margin-top: 70px;
 }
 
-/* Guide */
+/* ===========Guide============ */
 .guide {
-    margin-top: 79px;
+    margin-top: 40px;
+    padding: 79px 0px;
 }
 
 .guide .sub_title {
@@ -205,6 +207,7 @@ a {
     border-radius: 12px;
     left: 50%;
     top: -10px;
+    /* translateX itself */
     transform: translateX(-50%);
 }
 
@@ -249,10 +252,10 @@ a {
     min-width: 170px;
 }
 
-/* Feature */
+/* ======Feature======== */
 .feature {
     background: #f5fafe;
-    margin-top: 120px;
+    margin-top: 41px;
     padding: 110px 0;
 }
 .feature .sub-title {
